<resources>
    <string name="app_name">ICTscan</string>

    <string name="action_settings">Settings</string>
    <string name="action_restart">Restart with new photo</string>
    <string name="action_resetPoints">Reposition your points</string>
    <string name="action_switch2">Move the image</string>
    <string name="action_switch1">Choose a point</string>
    <string name="action_decoder1">Change to offline decoder</string>
    <string name="action_decoder2">Change to online decoder</string>
    <string name="action_about">About this app</string>

    <string name="button_text_1">Choose a Photo from Gallery</string>
    <string name="button_text_2">Take a Photo with your Camera
    </string>
    <string name="textView_start">First take or choose a photo</string>
    <string name="textView_corner_tl">Now select the corners: Start with the top-left corner</string>
    <string name="textView_corner_tr">Continue with the top-right corner</string>
    <string name="textView_corner_br">Continue with the bottom-right corner</string>
    <string name="textView_corner_bl">And, at last, the bottom-left corner</string>
    <string name="textView_confirm">Are you happy with your choice? Please confirm</string>

    <string name="leer"> </string>
    <string name="confirm">"Press -OK- , if your point is ok"</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Restart">Start with new photo</string>

    <string-array
        name="textView_corners">
        <item>Now select the corners: Start with the top-left corner
        </item>
        <item>Continue with the top-right corner
        </item>
        <item>Continue with the bottom-right corner
        </item>
        <item>And, at last, the bottom-left corner
        </item>
        <item>Reposition the image for top-left corner</item>
        <item>Reposition the image for top-right corner</item>
        <item>Reposition the image for bottom-right corner</item>
        <item>Reposition the image for bottom-left corner</item>
        <item>Starting from the top, how many rows have been selected?</item>
    </string-array>

    <string name="aboutThisApp">This application is a project by Lotte Heckmann, Alexander Lewin, Merlin Marek, Birger Nordmann, Yannick Stahl, Florian Voß mentored by the Chair for Theoretical Information Technology of RWTH Aachen University.\n\n
        You can decode the facades of the ICT Cubes in Aachen, which are encoded with a coding scheme developed by Georg Boecherer.\n
        Please refer to http://www.georg-boecherer.de/ict-cubes.html for more information on this topic.\n\n\ndistributed under BSD license</string>

    <string name="rowcountString">Number of rows selected:</string>

    <string name="diffDecoderOnline">Use the offline decoder</string>
    <string name="diffDecoderOffline">Use the online decoder</string>
    <string name="openInfoLink">More info on ICT Cubes</string>
    <string name="openTILink">Visit TI</string>
    <string name="title_activity_splash">splash</string>

    <string name="hello_world">Hello world!</string>

</resources>