<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.chocolatemilk.ictscan.start">
    <item
        android:id="@+id/action_restart"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_restart"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="98"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="99"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_resetPoints"
        android:icon="@drawable/ic_open_with_white_24dp"
        android:title="@string/action_resetPoints"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />
</menu>
