<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/LinearLayout1"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".start"
    android:padding="10dp">

    <TextView
        android:id="@+id/textInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_start"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="horizontal"
        android:id="@+id/buttonsLayout">

        <Button
            android:id="@+id/btnSelectPhoto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_text_1"
            android:gravity="center"/>

        <Button
            android:id="@+id/btnTakePhoto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_text_2"
            android:gravity="center"/>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/relLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_weight="2">

        <org.chocolatemilk.ictscan.TouchImageView
            android:id="@+id/viewImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_camera"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <org.chocolatemilk.ictscan.DragPointView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dragPointTL"
            android:visibility="gone"/>

        <org.chocolatemilk.ictscan.DragPointView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dragPointTR"
            android:visibility="gone"/>

        <org.chocolatemilk.ictscan.DragPointView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dragPointBR"
            android:visibility="gone"/>

        <org.chocolatemilk.ictscan.DragPointView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dragPointBL"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/OK"
            android:layout_centerVertical="true"
            android:visibility="invisible"/>

        </RelativeLayout>

    <TextView
        android:id="@+id/textRowCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rowcountString"
        android:gravity="center"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/rowcountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_weight="1">
        <NumberPicker
            android:id="@+id/numberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="30dp">
        </NumberPicker>
        <Button
            android:id="@+id/btnRowConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/OK"
            android:visibility="visible"/>

    </RelativeLayout>
</LinearLayout>